--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-334.1KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-291.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇨🇳 中国-201.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-2.80MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-201.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-201.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-209.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-781.7KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 波兰-738.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇨🇳 中国-855.1KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林), server: v1.tgfaka.com, port: 48443, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
+  - {name: 保加利亚-389.5KB/s(Youtube:不良林), server: 213.183.63.218, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 保加利亚-651.7KB/s(Youtube:不良林), server: 213.183.63.218, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
+      - 波兰-738.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
+      - 保加利亚-389.5KB/s(Youtube:不良林)
+      - 保加利亚-651.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
+      - 波兰-738.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
+      - 保加利亚-389.5KB/s(Youtube:不良林)
+      - 保加利亚-651.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
+      - 波兰-738.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
+      - 保加利亚-389.5KB/s(Youtube:不良林)
+      - 保加利亚-651.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
+      - 波兰-738.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
+      - 保加利亚-389.5KB/s(Youtube:不良林)
+      - 保加利亚-651.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
+      - 波兰-738.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
+      - 保加利亚-389.5KB/s(Youtube:不良林)
+      - 保加利亚-651.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
+      - 波兰-738.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
+      - 保加利亚-389.5KB/s(Youtube:不良林)
+      - 保加利亚-651.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
+      - 波兰-738.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
+      - 保加利亚-389.5KB/s(Youtube:不良林)
+      - 保加利亚-651.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
