--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-201.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.80MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-209.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林), server: 213.183.53.200, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 波兰-285.0KB/s(Youtube:不良林), server: 217.30.10.63, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
   - {name: 🇨🇳 中国-781.7KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 波兰-738.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇨🇳 中国-855.1KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林), server: v1.tgfaka.com, port: 48443, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
-  - {name: 保加利亚-389.5KB/s(Youtube:不良林), server: 213.183.63.218, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 保加利亚-651.7KB/s(Youtube:不良林), server: 213.183.63.218, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林), server: 213.183.53.182, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林), server: 213.183.53.200, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇺🇸 美国-214.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
-      - 波兰-738.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
-      - 保加利亚-389.5KB/s(Youtube:不良林)
-      - 保加利亚-651.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
-      - 波兰-738.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
-      - 保加利亚-389.5KB/s(Youtube:不良林)
-      - 保加利亚-651.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
-      - 波兰-738.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
-      - 保加利亚-389.5KB/s(Youtube:不良林)
-      - 保加利亚-651.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
-      - 波兰-738.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
-      - 保加利亚-389.5KB/s(Youtube:不良林)
-      - 保加利亚-651.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
-      - 波兰-738.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
-      - 保加利亚-389.5KB/s(Youtube:不良林)
-      - 保加利亚-651.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
-      - 波兰-738.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
-      - 保加利亚-389.5KB/s(Youtube:不良林)
-      - 保加利亚-651.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-781.7KB/s(Youtube:不良林)
-      - 波兰-738.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-663.8KB/s(Youtube:不良林)
-      - 保加利亚-389.5KB/s(Youtube:不良林)
-      - 保加利亚-651.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-293.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-629.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
