--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-525.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-399.8KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-723.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林), server: 213.183.53.200, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-214.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 波兰-285.0KB/s(Youtube:不良林), server: 217.30.10.63, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇺🇸 美国-564.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇳🇱 荷兰-569.6KB/s(Youtube:不良林), server: 37.120.192.158, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-313.2KB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇫🇷 法国-440.9KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 波兰-247.1KB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-265.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-440.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
+      - 波兰-247.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-440.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
+      - 波兰-247.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-440.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
+      - 波兰-247.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-440.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
+      - 波兰-247.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-440.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
+      - 波兰-247.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-440.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
+      - 波兰-247.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-800.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-666.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 波兰-285.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-440.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
+      - 波兰-247.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.6KB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
